--- a/my-website/staticwebapp.config.json
+++ b/my-website/staticwebapp.config.json
@@ -8,7 +8,18 @@
     "responseOverrides": {
         "401": {
             "rewrite": "/.auth/login/aad",
-            "statusCode": 302
+            "statusCode": 301
+        }
+    },
+    "auth": {
+        "identityProviders": {
+            "azureActiveDirectory": {
+                "registration": {
+                    "openIdIssuer": "https://login.microsoftonline.com/30f3a176-3041-4dd8-a764-9241387b9261/v2.0",
+                    "clientIdSettingName": "AZURE_CLIENT_ID",
+                    "clientSecretSettingName": "AZURE_CLIENT_SECRET"
+                }
+            }
         }
     }
 }
